# pam_panic

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  ChangeLog  ISSUE_TEMPLATE.md  Makefile  Makefile.am  PULL_REQUEST_TEMPLATE.md  README.md  configure  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md
man/: Makefile
man/de/man1/: pam_panic_pw.1
man/de/man8/: pam_panic.8
man/es/man8/: pam_panic.8
man/fr/man8/: pam_panic.8
man/man1/: pam_panic_pw.1
man/man8/: pam_panic.8
po/: LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  ja.gmo  ja.po  nl.po  pam_panic.pot  pl.po
po4a/: Makefile.am  de.po  es.po  fr.po  ja.po  nl.po  pam_panic.pot  pl.po  po4a.cfg
src/: Makefile  pam_panic.c
src/pam_panic/: Makefile  Makefile.am  config.h.in  pam_panic.c  pam_panic.h  pam_panic_authdevice.c  pam_panic_authdevice.h  pam_panic_password.c  pam_panic_password.h  pam_panic_reject.c  pam_panic_reject.h
src/pam_panic/data/: Makefile.am
src/pam_panic/man/: Makefile.am
src/pam_panic/man/de/: pam_panic.8
src/pam_panic/man/de/man8/: pam_panic.8
src/pam_panic/man/es/: pam_panic.8
src/pam_panic/man/es/man8/: pam_panic.8
src/pam_panic/man/fr/: pam_panic.8
src/pam_panic/man/fr/man8/: pam_panic.8
src/pam_panic/man/ja/man8/: pam_panic.8
src/pam_panic/man/man8/: pam_panic.8
src/pam_panic_config/: Makefile.am  pam_panic_config  pam_panic_config.prebuild  pam_panic_config.prebuild.sh
src/pam_panic_config/applications/: Makefile.am  pam_panic_config.desktop  pampanic-config.desktop
src/pam_panic_config/icons/: Makefile.am
src/pam_panic_config/icons/48x48/: Makefile.am
src/pam_panic_config/icons/64x64/: Makefile.am
src/pam_panic_config/icons/scalable/: Makefile.am
src/pam_panic_pw/: Makefile  Makefile.am  config.h.in  pam_panic_pw.c  pam_panic_pw.h
src/pam_panic_pw/man/: Makefile.am
src/pam_panic_pw/man/de/man1/: pam_panic_pw.1
src/pam_panic_pw/man/es/man1/: pam_panic_pw.1
src/pam_panic_pw/man/fr/man1/: pam_panic_pw.1
src/pam_panic_pw/man/ja/man1/: pam_panic_pw.1
src/pam_panic_pw/man/man1/: pam_panic_pw.1
test/: Makefile.am  test.c
